# devscript

./: .gitignore  README.md  devscript.d.ts  devscript.d.ts.map  devscript.js  devscript.js.map  devscript.ts  package-lock.json  package.json  pyproject.toml  schema.json
.github/workflows/: publish.py.yml
devscript/: __init__.py
